// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetUsersHandler execute should return a paged list of users: #0 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-04-17T12:06:15.275Z,
      "createdBy": null,
      "email": "paging26@tapapp.com",
      "firstName": null,
      "id": "53558240-8094-4c3f-9028-e4626be150a9",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:06:15.275Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:06:11.634Z,
      "createdBy": null,
      "email": "paging25@tapapp.com",
      "firstName": null,
      "id": "e8570f65-8e1a-4447-8611-1832e238f64a",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:06:11.634Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:06:07.849Z,
      "createdBy": null,
      "email": "paging24@tapapp.com",
      "firstName": null,
      "id": "5df6c5e4-3d6e-40d5-9401-6d0db7340bc7",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:06:07.849Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:06:03.258Z,
      "createdBy": null,
      "email": "paging23@tapapp.com",
      "firstName": null,
      "id": "2df551b1-f385-4f72-862b-1870e41943c3",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:06:03.258Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:58.745Z,
      "createdBy": null,
      "email": "paging22@tapapp.com",
      "firstName": null,
      "id": "f9110938-a03e-49d4-b8bf-8e99dab0531d",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:58.745Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:55.162Z,
      "createdBy": null,
      "email": "paging21@tapapp.com",
      "firstName": null,
      "id": "417d2d73-41a0-43f2-9eef-800cab59209e",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:55.162Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:51.573Z,
      "createdBy": null,
      "email": "paging20@tapapp.com",
      "firstName": null,
      "id": "45a16899-d259-4982-9040-3abd3d11b00e",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:51.573Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:47.795Z,
      "createdBy": null,
      "email": "paging19@tapapp.com",
      "firstName": null,
      "id": "82ac0573-73bc-4da2-919a-fb8094da444c",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:47.795Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:42.986Z,
      "createdBy": null,
      "email": "paging18@tapapp.com",
      "firstName": null,
      "id": "3cd2ef87-c542-48bd-b763-06ca71bd0b68",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:42.986Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:38.908Z,
      "createdBy": null,
      "email": "paging17@tapapp.com",
      "firstName": null,
      "id": "043c6044-7302-48e8-ad37-bbd0b6e5ddd1",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:38.908Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:33.779Z,
      "createdBy": null,
      "email": "paging16@tapapp.com",
      "firstName": null,
      "id": "63965bd7-ea40-47bd-9d5f-9c09ebce3a4f",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:33.779Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:29.141Z,
      "createdBy": null,
      "email": "paging15@tapapp.com",
      "firstName": null,
      "id": "4264fdef-899a-4861-aec3-0a8816465d07",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:29.141Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:25.506Z,
      "createdBy": null,
      "email": "paging14@tapapp.com",
      "firstName": null,
      "id": "10c93450-010c-471a-963d-14f67c84df41",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:25.506Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:21.385Z,
      "createdBy": null,
      "email": "paging13@tapapp.com",
      "firstName": null,
      "id": "0b84e599-61db-4757-8c80-754a41be8451",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:21.385Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:17.305Z,
      "createdBy": null,
      "email": "paging12@tapapp.com",
      "firstName": null,
      "id": "a30f2f22-bdad-4bbe-b792-2210789a41ac",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:17.305Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:12.756Z,
      "createdBy": null,
      "email": "paging11@tapapp.com",
      "firstName": null,
      "id": "31e1634e-f92e-4fd2-ad58-f172b94b61d9",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:12.756Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:07.802Z,
      "createdBy": null,
      "email": "paging10@tapapp.com",
      "firstName": null,
      "id": "9559fb04-cf53-4d95-b89d-74071b878485",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:07.802Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:03.627Z,
      "createdBy": null,
      "email": "paging9@tapapp.com",
      "firstName": null,
      "id": "85140bf6-214e-40ee-a79f-dc8c4a4b5c3a",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:03.627Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:00.066Z,
      "createdBy": null,
      "email": "paging8@tapapp.com",
      "firstName": null,
      "id": "e2c1ae7f-cb01-4ffe-88b1-202835e63f85",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:00.066Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:04:55.805Z,
      "createdBy": null,
      "email": "paging7@tapapp.com",
      "firstName": null,
      "id": "e552ef88-3278-45c2-a03d-f702385f66df",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:04:55.805Z,
      "updatedBy": null,
    },
  ],
  "meta": Object {
    "count": 20,
    "skip": 0,
    "totalCount": 32,
  },
}
`;

exports[`GetUsersHandler execute should return a paged list of users: #1 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-04-17T12:06:07.849Z,
      "createdBy": null,
      "email": "paging24@tapapp.com",
      "firstName": null,
      "id": "5df6c5e4-3d6e-40d5-9401-6d0db7340bc7",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:06:07.849Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:06:03.258Z,
      "createdBy": null,
      "email": "paging23@tapapp.com",
      "firstName": null,
      "id": "2df551b1-f385-4f72-862b-1870e41943c3",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:06:03.258Z,
      "updatedBy": null,
    },
  ],
  "meta": Object {
    "count": 2,
    "skip": 2,
    "totalCount": 32,
  },
}
`;

exports[`GetUsersHandler execute should return a paged list of users: #2 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-04-17T12:03:51.835Z,
      "createdBy": "development@icapps.com",
      "email": "user1@tapapp.com",
      "firstName": "Tom",
      "id": "49affd08-f461-4e80-899f-7612e971ff12",
      "lastName": "De Buyser",
      "roles": Array [
        Role {
          "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
          "name": "Admin",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-04-17T12:03:51.835Z,
      "updatedBy": "development@icapps.com",
    },
  ],
  "meta": Object {
    "count": 1,
    "skip": 0,
    "totalCount": 1,
  },
}
`;

exports[`GetUsersHandler execute should return a paged list of users: #3 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-04-17T12:03:42.124Z,
      "createdBy": null,
      "email": "development@icapps.com",
      "firstName": null,
      "id": "c4cb4582-1e97-4e3e-9d49-c744c8c1a229",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
          "name": "Admin",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-04-17T12:03:42.124Z,
      "updatedBy": null,
    },
  ],
  "meta": Object {
    "count": 1,
    "skip": 0,
    "totalCount": 1,
  },
}
`;

exports[`GetUsersHandler execute should return a paged list of users: #4 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-04-17T12:03:51.835Z,
      "createdBy": "development@icapps.com",
      "email": "user1@tapapp.com",
      "firstName": "Tom",
      "id": "49affd08-f461-4e80-899f-7612e971ff12",
      "lastName": "De Buyser",
      "roles": Array [
        Role {
          "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
          "name": "Admin",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-04-17T12:03:51.835Z,
      "updatedBy": "development@icapps.com",
    },
  ],
  "meta": Object {
    "count": 1,
    "skip": 0,
    "totalCount": 1,
  },
}
`;

exports[`GetUsersHandler execute should return a paged list of users: #5 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-04-17T12:03:42.124Z,
      "createdBy": null,
      "email": "development@icapps.com",
      "firstName": null,
      "id": "c4cb4582-1e97-4e3e-9d49-c744c8c1a229",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
          "name": "Admin",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-04-17T12:03:42.124Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:03:51.835Z,
      "createdBy": "development@icapps.com",
      "email": "user1@tapapp.com",
      "firstName": "Tom",
      "id": "49affd08-f461-4e80-899f-7612e971ff12",
      "lastName": "De Buyser",
      "roles": Array [
        Role {
          "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
          "name": "Admin",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-04-17T12:03:51.835Z,
      "updatedBy": "development@icapps.com",
    },
    User {
      "createdAt": 2020-04-17T12:03:56.913Z,
      "createdBy": "development@icapps.com",
      "email": "user2@tapapp.com",
      "firstName": "Benno",
      "id": "45c2c554-b06a-4209-aba8-b097cb5f8566",
      "lastName": "Meysmans",
      "roles": Array [
        Role {
          "id": "d02a468f-0225-463d-a9a4-8c7d05cbe62c",
          "name": "Support",
        },
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-04-17T12:03:56.913Z,
      "updatedBy": "development@icapps.com",
    },
    User {
      "createdAt": 2020-04-17T12:04:04.688Z,
      "createdBy": "development@icapps.com",
      "email": "user3@tapapp.com",
      "firstName": "Jens",
      "id": "db5e788c-2642-4c40-a63a-f13675048ddc",
      "lastName": "De Craecker",
      "roles": Array [
        Role {
          "id": "d02a468f-0225-463d-a9a4-8c7d05cbe62c",
          "name": "Support",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:04:04.688Z,
      "updatedBy": "development@icapps.com",
    },
    User {
      "createdAt": 2020-04-17T12:04:09.483Z,
      "createdBy": "development@icapps.com",
      "email": "user4@tapapp.com",
      "firstName": null,
      "id": "c356fce8-9f95-4c69-9e71-8f4d74f49b8f",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-04-17T12:04:09.483Z,
      "updatedBy": "development@icapps.com",
    },
    User {
      "createdAt": 2020-04-17T12:04:19.138Z,
      "createdBy": "development@icapps.com",
      "email": "user5@tapapp.com",
      "firstName": null,
      "id": "af965f04-8c7d-4e20-b230-932b0ff3a33f",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:04:19.138Z,
      "updatedBy": "development@icapps.com",
    },
    User {
      "createdAt": 2020-04-17T12:04:23.647Z,
      "createdBy": null,
      "email": "paging1@tapapp.com",
      "firstName": null,
      "id": "951328c3-ab15-4b58-b759-4695a8eb59ca",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:04:23.647Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:04:27.410Z,
      "createdBy": null,
      "email": "paging2@tapapp.com",
      "firstName": null,
      "id": "1ca59e34-00ea-42df-b3c7-c36cabb448c2",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:04:27.410Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:04:31.817Z,
      "createdBy": null,
      "email": "paging3@tapapp.com",
      "firstName": null,
      "id": "f639625b-57a0-4dbf-b6ff-8162228c57c8",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:04:31.817Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:04:36.553Z,
      "createdBy": null,
      "email": "paging4@tapapp.com",
      "firstName": null,
      "id": "5e2b0f76-caab-4d27-bc11-91eea1190fdb",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:04:36.553Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:04:41.066Z,
      "createdBy": null,
      "email": "paging5@tapapp.com",
      "firstName": null,
      "id": "18996066-1711-4c87-a2a0-e0c288ee1ff3",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:04:41.066Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:04:45.700Z,
      "createdBy": null,
      "email": "paging6@tapapp.com",
      "firstName": null,
      "id": "310f59f6-5456-4798-8ce0-48bc7cbafbb0",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:04:45.700Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:04:55.805Z,
      "createdBy": null,
      "email": "paging7@tapapp.com",
      "firstName": null,
      "id": "e552ef88-3278-45c2-a03d-f702385f66df",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:04:55.805Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:00.066Z,
      "createdBy": null,
      "email": "paging8@tapapp.com",
      "firstName": null,
      "id": "e2c1ae7f-cb01-4ffe-88b1-202835e63f85",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:00.066Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:03.627Z,
      "createdBy": null,
      "email": "paging9@tapapp.com",
      "firstName": null,
      "id": "85140bf6-214e-40ee-a79f-dc8c4a4b5c3a",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:03.627Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:07.802Z,
      "createdBy": null,
      "email": "paging10@tapapp.com",
      "firstName": null,
      "id": "9559fb04-cf53-4d95-b89d-74071b878485",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:07.802Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:12.756Z,
      "createdBy": null,
      "email": "paging11@tapapp.com",
      "firstName": null,
      "id": "31e1634e-f92e-4fd2-ad58-f172b94b61d9",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:12.756Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:17.305Z,
      "createdBy": null,
      "email": "paging12@tapapp.com",
      "firstName": null,
      "id": "a30f2f22-bdad-4bbe-b792-2210789a41ac",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:17.305Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:21.385Z,
      "createdBy": null,
      "email": "paging13@tapapp.com",
      "firstName": null,
      "id": "0b84e599-61db-4757-8c80-754a41be8451",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:21.385Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-04-17T12:05:25.506Z,
      "createdBy": null,
      "email": "paging14@tapapp.com",
      "firstName": null,
      "id": "10c93450-010c-471a-963d-14f67c84df41",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-04-17T12:05:25.506Z,
      "updatedBy": null,
    },
  ],
  "meta": Object {
    "count": 20,
    "skip": 0,
    "totalCount": 32,
  },
}
`;

exports[`GetUsersHandler execute should return an empty list if no users found 1`] = `
Object {
  "data": Array [],
  "meta": Object {
    "count": 0,
    "skip": 0,
    "totalCount": 0,
  },
}
`;
